Update 2.5. Matriz de cumplimiento

--- a/2.5.-Matriz-de-cumplimiento.md
+++ b/2.5.-Matriz-de-cumplimiento.md
@@ -1,39 +1,40 @@
 # Cobertura de Historias de Usuario
 
-| Historia de Usuario                                       | OJS (Open Source)                          | MagHub (Comercial)                        | Desarrollo Propio                               |
-| --------------------------------------------------------- | ------------------------------------------ | ----------------------------------------- | ----------------------------------------------- |
-| **HU.01 Autor + docs bancarios (CV/DNI)**                 | ✓ (perfil + adjuntos; faltan bancarios)    | ~ (CRM con adjuntos; no modela bancarios) | ✓ (datos civiles/militares + docs bancarios)    |
-| **HU.02 Artículo + autores + documentos**                 | ✓ (multi-autor, ficheros y metadatos)      | ~ (gestión de contenidos, no académico)   | ✓ (autores múltiples y preservación tipo/orden) |
-| **HU.03 Estados de artículo (ciclo completo)**            | ✓ (workflow configurable)                  | ~ (workflow editorial, no científico)     | ✓ (ciclo trazable configurable)                 |
-| **HU.04 Clasificación artículo (tipo/temática/sección)**  | ✓ (secciones, keywords)                    | ✓ (metadatos configurables)               | ✓ (tipos, secciones, temáticas definidas)       |
-| **HU.05 Alta de consejeros (militares)**                  | ✓ (usuarios revisores, sin perfil militar) | ~ (roles genéricos)                       | ✓ (perfil militar explícito)                    |
-| **HU.06 Asignación consejeros a artículos**               | ✓ (gestión revisores)                      | ~ (workflows de tareas)                   | ✓ (asignación con roles militares)              |
-| **HU.07 Registrar evaluaciones + informe**                | ✓ (formulario revisión + adjuntos)         | ~ (feedback/tarea genérica)               | ✓ (nota, recomendación, adjunto)                |
-| **HU.08 Crear números de revista**                        | ✓ (issues nativos)                         | ✓ (flatplanning / ediciones)              | ✓ (número con control de páginas)               |
-| **HU.09 Asignar artículos a número**                      | ✓ (asociación artículo-issue)              | ✓ (planificación de páginas)              | ✓ (asignación validada por número/páginas)      |
-| **HU.10 Publicar número de revista**                      | ✓ (estado publicado)                       | ✓ (workflow publicación)                  | ✓ (bloqueo edición tras cierre)                 |
-| **HU.11 Consultas avanzadas artículos/autores**           | ✓ (filtros avanzados y exportación)        | ✓ (listados/exportaciones CRM)            | ✓ (búsqueda multicriterio frontend)             |
-| **HU.12 Etiquetas de envío a autores**                    | ~ (plugin externo o CSV)                   | ✓ (módulo circulación etiquetas)          | ✓ (PDF/XLS integrado)                           |
-| **HU.13 Alta suscriptores + suscripciones**               | ~ (usuarios de acceso digital)             | ✓ (gestión completa)                      | ✓ (suscriptor civil/militar con direcciones)    |
-| **HU.14 Pagador distinto de suscriptor**                  | ~ (requiere personalización)               | ✓ (distintos contactos/pagadores)         | ✓ (entidad pagador separada)                    |
-| **HU.15 Estados de suscripción**                          | ~ (acceso online, sin logística)           | ✓ (activa/suspendida/cancelada)           | ✓ (activa/suspendida/vencida)                   |
-| **HU.16 Generar etiquetas suscriptores**                  | ~ (no nativo; requiere plugin)             | ✓ (exportación estándar)                  | ✓ (PDF/XLS con direcciones múltiples)           |
-| **HU.17 Exportar etiquetas PDF/XLS**                      | ~ (plugin/módulo extra)                    | ✓ (plantillas listas)                     | ✓ (generación backend configurable)             |
-| **HU.18 Consulta de suscriptores/suscripciones**          | ~ (consultas básicas)                      | ✓ (consultas y listados)                  | ✓ (consultas detalladas con filtros)            |
-| **HU.19 Certificados de pago a autores publicados**       | ~ (manual o adjunto)                       | ✓ (facturación integrada)                 | ✓ (certificado con retención e importe)         |
-| **HU.20 Exportar certificados PDF/XLS**                   | ~ (sin módulo financiero)                  | ✓ (reportes financieros exportables)      | ✓ (exportación PDF/XLS parametrizada)           |
-| **HU.21 Buscar artículos**                                | ✓ (filtros y búsqueda avanzada)            | ✓ (CRM con búsqueda avanzada)             | ✓ (búsqueda multicampo y temática)              |
-| **HU.22 Buscar autores**                                  | ✓ (usuarios y metadatos)                   | ✓ (CRM contactos)                         | ✓ (filtros por unidad/perfil militar)           |
-| **HU.23 Buscar números de revista**                       | ✓ (issues filtrables)                      | ✓ (flatplan filtrable)                    | ✓ (filtros por año, estado, publicación)        |
-| **HU.24 Consultar observaciones y versiones**             | ✓ (historial artículos)                    | ~ (comentarios simples)                   | ✓ (trazabilidad completa de versiones)          |
-| **HU.25 Panel control de publicación**                    | ~ (estadísticas básicas)                   | ✓ (dashboards)                            | ✓ (panel consolidado)                           |
-| **HU.26 Alta usuarios**                                   | ✓ (creación cuentas)                       | ✓ (usuarios CRM)                          | ✓ (roles y usuarios controlados)                |
-| **HU.27 Asignación de roles**                             | ✓ (roles predefinidos)                     | ✓ (roles CRM configurables)               | ✓ (roles personalizables)                       |
-| **HU.28 Consultar/editar usuarios**                       | ✓ (usuarios admin)                         | ✓ (gestión cuentas CRM)                   | ✓ (edición y auditoría usuarios)                |
-| **HU.29 Configurar secciones de revista**                 | ✓ (secciones nativas)                      | ✓ (configurable por edición)              | ✓ (estructura editorial parametrizada)          |
-| **HU.30 Controlar evaluaciones pendientes**               | ✓ (workflow revisión)                      | ~ (sin control académico)                 | ✓ (alertas y trazabilidad)                      |
-| **HU.31 Panel de informes y estadísticas**                | ✓ (stats básicas)                          | ✓ (reportes visuales)                     | ✓ (reportes configurables)                      |
-| **HU.32 Gestión de credenciales DICODEF / login militar** | ~ (autenticación local)                    | ~ (no soporta federación militar)         | ✓ (integración DICODEF con roles internos)      |
+| Historia de Usuario                                                        | OJS (Open Source)                          | MagHub (Comercial)                                | Desarrollo Propio                                    |
+| -------------------------------------------------------------------------- | ------------------------------------------ | ------------------------------------------------- | ---------------------------------------------------- |
+| **HU.01 – Registrar datos de contacto del autor**                          | ✓ (perfil de usuario, faltan bancarios)    | ~ (CRM con ficha de contacto, sin perfil militar) | ✓ (panel autor/redactor con datos civiles/militares) |
+| **HU.02 – Asociar documentos obligatorios y opcionales (DNI, CV, anexos)** | ✓ (adjuntos de usuario y artículo)         | ~ (adjuntos CRM, no tipificados)                  | ✓ (soporte completo con validación de tipo y tamaño) |
+| **HU.03 – Registrar perfil militar**                                       | ~ (no modela jerarquía militar)            | ~ (no contempla estructura militar)               | ✓ (campos específicos: empleo, unidad, situación)    |
+| **HU.04 – Registrar datos bancarios del autor**                            | ~ (no modela cuentas bancarias)            | ~ (CRM con campos genéricos de facturación)       | ✓ (IBAN, titular y validación de formato)            |
+| **HU.05 – Visualizar ficha del autor con sus artículos**                   | ✓ (perfil + publicaciones)                 | ~ (vista CRM parcial)                             | ✓ (relación directa autor–artículos en panel)        |
+| **HU.06 – Dar de alta artículos con metadatos y manuscritos (versiones)**  | ✓ (multi-autor, versiones, ficheros)       | ~ (workflow editorial no académico)               | ✓ (registro completo con control de versiones)       |
+| **HU.07 – Actualizar estado de un artículo**                               | ✓ (workflow configurable)                  | ~ (tareas editoriales básicas)                    | ✓ (ciclo trazable configurable)                      |
+| **HU.08 – Asignar artículos a consejeros desde panel**                     | ✓ (módulo de revisión)                     | ~ (workflow de tareas)                            | ✓ (panel con asignación explícita)                   |
+| **HU.09 – Consultar listado de consejeros registrados**                    | ✓ (listado revisores)                      | ~ (roles genéricos de colaborador)                | ✓ (listado con filtros por perfil y unidad)          |
+| **HU.10 – Registrar, editar o eliminar consejeros**                        | ✓ (gestión usuarios revisores)             | ~ (gestión de contactos, sin especialización)     | ✓ (CRUD completo con perfil militar)                 |
+| **HU.11 – Registrar evaluaciones con nota y recomendación**                | ✓ (formularios revisión)                   | ~ (comentarios o tareas)                          | ✓ (evaluación formal con nota y recomendación)       |
+| **HU.12 – Adjuntar informes de evaluación**                                | ✓ (adjuntos revisores)                     | ~ (ficheros genéricos)                            | ✓ (adjunto vinculado a evaluación)                   |
+| **HU.13 – Crear números de revista**                                       | ✓ (issues y publicación)                   | ✓ (flatplanning y planificación de números)       | ✓ (número con control de páginas y fechas)           |
+| **HU.14 – Gestionar secciones dentro de un número**                        | ✓ (secciones y categorías)                 | ✓ (estructuras configurables)                     | ✓ (definición de secciones editables)                |
+| **HU.15 – Asignar artículos aceptados a secciones de un número**           | ✓ (asociación artículo–issue)              | ✓ (planificación editorial)                       | ✓ (validación de sección y número)                   |
+| **HU.16 – Dar de alta y editar suscriptores**                              | ~ (usuarios online, no circulación física) | ✓ (CRM de suscriptores completo)                  | ✓ (suscriptor civil/militar con direcciones)         |
+| **HU.17 – Modificar el estado de una suscripción**                         | ~ (no modela estados físicos)              | ✓ (activa/suspendida/cancelada)                   | ✓ (activa/suspendida/vencida)                        |
+| **HU.18 – Registrar datos personales y de contacto del suscriptor**        | ~ (datos básicos de usuario)               | ✓ (CRM de contactos detallado)                    | ✓ (dirección, teléfono, email, notas)                |
+| **HU.19 – Registrar un pagador distinto al suscriptor**                    | ~ (no nativo, requiere plugin)             | ✓ (contactos/pagadores múltiples)                 | ✓ (entidad pagador independiente)                    |
+| **HU.20 – Registrar direcciones postales asociadas a suscriptores**        | ~ (solo dirección principal)               | ✓ (direcciones múltiples por contacto)            | ✓ (múltiples direcciones por suscripción)            |
+| **HU.21 – Generar etiquetas de envío postal en plantillas configurables**  | ~ (requiere plugin externo)                | ✓ (módulo de circulación con etiquetas)           | ✓ (plantillas PDF/XLS configurables)                 |
+| **HU.22 – Exportar etiquetas de envío postal en PDF/XLS**                  | ~ (exportación CSV o plugin)               | ✓ (plantillas nativas de exportación)             | ✓ (generación integrada con filtros)                 |
+| **HU.23 – Consultar y actualizar el estado de los números de la revista**  | ✓ (panel de issues)                        | ✓ (seguimiento de ediciones)                      | ✓ (panel con estados editable por dirección)         |
+| **HU.24 – Consultar observaciones y versiones de documentos de artículos** | ✓ (historial de revisión)                  | ~ (comentarios simples)                           | ✓ (registro de versiones con trazabilidad)           |
+| **HU.25 – Buscar artículos por título, autor, estado y temática**          | ✓ (buscador avanzado)                      | ✓ (CRM búsqueda avanzada)                         | ✓ (búsqueda multicampo parametrizada)                |
+| **HU.26 – Buscar autores por nombre, perfil o unidad**                     | ✓ (búsqueda usuarios)                      | ✓ (filtros por contacto)                          | ✓ (búsqueda avanzada con filtros militares)          |
+| **HU.27 – Buscar números de revista publicados o en preparación**          | ✓ (filtros en issues)                      | ✓ (flatplan filtrable)                            | ✓ (filtros por año, estado, publicación)             |
+| **HU.28 – Generar certificados de pago para autores**                      | ~ (manual o adjunto)                       | ✓ (facturación integrada)                         | ✓ (certificado automático con retención)             |
+| **HU.29 – Exportar certificados de pago en PDF/XLS**                       | ~ (sin módulo financiero)                  | ✓ (reportes financieros exportables)              | ✓ (exportación configurada a PDF/XLS)                |
+| **HU.30 – Dar de alta usuarios en el sistema**                             | ✓ (módulo de usuarios)                     | ✓ (gestión de usuarios CRM)                       | ✓ (creación con roles definidos)                     |
+| **HU.31 – Asignar roles a los usuarios**                                   | ✓ (roles predefinidos)                     | ✓ (roles configurables)                           | ✓ (asignación múltiple por usuario)                  |
+| **HU.32 – Consultar y editar usuarios dados de alta**                      | ✓ (gestión usuarios admin)                 | ✓ (usuarios editables en CRM)                     | ✓ (edición y auditoría con permisos)                 |
+
 
 ### Leyenda
 - **✓** → Cobertura nativa  
