Update 2.6. Matriz de decision

--- a/2.6.-Matriz-de-decision.md
+++ b/2.6.-Matriz-de-decision.md
@@ -1,15 +1,13 @@
 # Matriz de Decisión (MagHub vs OJS vs Desarrollo Propio)
 
-| **Criterio**          | **Peso** | **MagHub (Comercial)**                                                                                  | **OJS (Open Source)**                                                       | **Desarrollo Propio**                                                                       |
-| --------------------- | -------- | ------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------- |
-| **Coste**             | 0.30     | 2 (alto coste recurrente: 500–1000 €/mes) → **0.60**                                                    | 4 (muy bajo: hosting 50–150 €/mes) → **1.20**                               | 4 (bajo inicial, sin licencias, coste de equipo) → **1.20**                                 |
-| **Tiempo despliegue** | 0.20     | 4 (rápido: 1–2 meses) → **0.80**                                                                        | 3 (1–3 meses, requiere soporte) → **0.60**                                  | 3 (2 meses para MVP) → **0.60**                                                             |
-| **Funcionalidades**   | 0.25     | 3 (CRM, suscripciones, facturación, publicidad, pero no ajustado a revistas institucionales) → **0.75** | 3 (flujo editorial digital fuerte, débil en distribución física) → **0.75** | 5 (editorial + distribución física + etiquetas + informes, totalmente adaptable) → **1.25** |
-| **Riesgo**            | 0.15     | 3 (dependencia SaaS, subida de tarifas) → **0.45**                                                      | 3 (dependencia comunidad, personalización costosa) → **0.45**               | 2 (dependencia del equipo interno, riesgo de deuda técnica) → **0.30**                      |
-| **Usabilidad**        | 0.10     | 4 (interfaz moderna, soporte incluido) → **0.40**                                                       | 2 (interfaz menos intuitiva) → **0.20**                                     | 4 (personalizable, moderna con Angular/Bootstrap) → **0.40**                                |
-| **TOTAL**             | 1.00     | **3.00**                                                                                                | **3.20**                                                                    | **3.75**                                                                                    |
-
----
+| **Criterio**          | **Peso** | **MagHub (Comercial)**                                                             | **OJS (Open Source)**                                               | **Desarrollo Propio**                                                      |
+| --------------------- | -------- | ---------------------------------------------------------------------------------- | ------------------------------------------------------------------- | -------------------------------------------------------------------------- |
+| **Coste**             | 0.30     | 1 (muy alto: 500–1000 €/mes de licencia SaaS) → **0.30**                           | 5 (muy bajo: hosting básico y mantenimiento mínimo) → **1.50**      | 4 (inversión inicial baja, sin licencias) → **1.20**                       |
+| **Tiempo despliegue** | 0.20     | 4 (rápido: 1–2 meses con soporte comercial) → **0.80**                             | 3 (1–3 meses; requiere configuración y plugins) → **0.60**          | 3 (2 meses para MVP funcional) → **0.60**                                  |
+| **Funcionalidades**   | 0.25     | 3 (CRM completo, suscripciones y facturación; débil en flujo académico) → **0.75** | 3 (flujo editorial fuerte, débil en distribución física) → **0.75** | 5 (cubre editorial, distribución física, etiquetas y reporting) → **1.25** |
+| **Riesgo**            | 0.15     | 3 (dependencia SaaS y costes futuros) → **0.45**                                   | 3 (dependencia de comunidad y personalización limitada) → **0.45**  | 2 (riesgo medio: mantenimiento interno) → **0.30**                         |
+| **Usabilidad**        | 0.10     | 4 (interfaz moderna, soporte incluido) → **0.40**                                  | 2 (interfaz técnica, curva de aprendizaje) → **0.20**               | 4 (interfaz moderna y adaptable con Angular/Bootstrap) → **0.40**          |
+| **TOTAL**             | **1.00** | **2.70**                                                                           | **3.50**                                                            | **3.75**                                                                   |
 
 ## Resultado
 
