Update 2.6. Matriz de decision

--- a/2.6.-Matriz-de-decision.md
+++ b/2.6.-Matriz-de-decision.md
@@ -9,6 +9,17 @@
 | **Usabilidad**        | 0.10     | 4 (interfaz moderna, soporte incluido) → **0.40**                                  | 2 (interfaz técnica, curva de aprendizaje) → **0.20**               | 4 (interfaz moderna y adaptable con Angular/Bootstrap) → **0.40**          |
 | **TOTAL**             | **1.00** | **2.70**                                                                           | **3.50**                                                            | **3.75**                                                                   |
 
+Incluimos una comparativa del Coste a 10 años de las tres alternativas, para:
+* Paquete básico de suscripción
+* 5 Licencias de usuario
+
+| **Alternativa**                    | **Puntuación Ponderada** | **Tiempo de despliegue** | **Pago único** | **Coste recurrente anual** | **Coste total a 10 años** |
+| ---------------------------------- | ------------------------ | ------------------------ | -------------- | -------------------------- | ------------------------- |
+| **1. Desarrollo Propio**           | **3.75**                 | 3 meses                  | 0 €            | 1.000 €/año (hosting)      | **10.000 €**              |
+| **2. Software Open Source (OJS)**  | **3.20**                 | 3 meses                  | 12.000 €       | 1.500 €/año (hosting)      | **27.500 €**              |
+| **3. Software Comercial (MagHub)** | **2.70**                 | 1 mes                    | 500 €          | 26.000 €/año/usuario       | **262.800 €**             |
+
+
 ## Resultado
 
 * **Desarrollo Propio (3.75/5)** → Mejor opción global: máxima adecuación funcional, bajo coste recurrente, control completo sobre distribución física y cumplimiento de requisitos específicos.
