--- a/5.1.-Sprint-Planning.md
+++ b/5.1.-Sprint-Planning.md
@@ -2,83 +2,79 @@
 
 ## PBI 01 – Gestión de Autores (HU.01 – HU.05)
 
-| ID | Título del Issue | HU Asociada | Dependencias | PBI | HE (h) |
-|----|------------------|--------------|---------------|------|--------|
-| 01 | Crear formulario de alta de autor (datos personales y contacto) | HU.01 | – | PBI-01 | 8 |
-| 02 | Implementar carga de direcciones (≥1 obligatoria) | HU.01 | 01 | PBI-01 | 6 |
-| 03 | Implementar carga de documentos obligatorios (DNI + CV) | HU.01 | 01 | PBI-01 | 6 |
-| 04 | Añadir registro de perfil militar en autores | HU.01 | 01 | PBI-01 | 4 |
-| 05 | Añadir datos bancarios en ficha de autor | HU.01 | 01 | PBI-01 | 4 |
-| 06 | Crear vista de ficha de autor con listado de artículos asociados | HU.05 | 01–05 | PBI-01 | 6 |
-| 07 | Añadir buscador de autores con filtros básicos | HU.05 | 01–06 | PBI-01 | 6 |
+| ID | Título del Issue                                                 | HU Asociada | Dependencias | PBI    | HE (h) |
+| -- | ---------------------------------------------------------------- | ----------- | ------------ | ------ | ------ |
+| 01 | Crear formulario de alta de autor (datos personales y contacto)  | HU.01       | –            | PBI-01 | 8      |
+| 02 | Implementar carga de direcciones (≥1 obligatoria)                | HU.01       | 01           | PBI-01 | 6      |
+| 03 | Implementar carga de documentos obligatorios (DNI + CV)          | HU.01       | 01           | PBI-01 | 6      |
+| 04 | Añadir registro de perfil militar en autores                     | HU.01       | 01           | PBI-01 | 4      |
+| 05 | Añadir datos bancarios en ficha de autor                         | HU.01       | 01           | PBI-01 | 4      |
+| 06 | Crear vista de ficha de autor con listado de artículos asociados | HU.05       | 01–05        | PBI-01 | 6      |
+| 07 | Añadir buscador de autores con filtros básicos                   | HU.05       | 01–06        | PBI-01 | 6      |
 
 **Total estimado PBI-01:** ≈ **40 h**
 
----
-
 ## PBI 02 – Gestión de Artículos (HU.02 – HU.04)
 
-| ID | Título del Issue | HU Asociada | Dependencias | PBI | HE (h) |
-|----|------------------|--------------|---------------|------|--------|
-| 08 | Crear formulario de alta de artículo (título, tipo, temática, sección, fecha) | HU.02 | – | PBI-02 | 8 |
-| 09 | Implementar asociación de autores a artículos con orden de autoría | HU.02 | 01–08 | PBI-02 | 8 |
-| 10 | Añadir carga de manuscrito obligatorio (DOC/PDF) y anexos opcionales | HU.02 | 08 | PBI-02 | 6 |
-| 11 | Clasificación de artículos en Artículos/Sección Fija | HU.02 | 08 | PBI-02 | 4 |
-| 12 | Crear vista de detalle de artículo con documentos adjuntos | HU.02 | 08–11 | PBI-02 | 6 |
-| 13 | Implementar flujo de estados de artículos (Recibido → En revisión → Evaluado → Propuesto → Publicado/Archivado) | HU.03 | 08–12 | PBI-02 | 8 |
-| 14 | Validar transiciones de estado según reglas | HU.03 | 13 | PBI-02 | 6 |
-| 15 | Implementar clasificación de artículo (tipo/sección) | HU.04 | 08 | PBI-02 | 6 |
+| ID | Título del Issue                                                                                                | HU Asociada | Dependencias | PBI    | HE (h) |
+| -- | --------------------------------------------------------------------------------------------------------------- | ----------- | ------------ | ------ | ------ |
+| 08 | Crear formulario de alta de artículo (título, tipo, temática, sección, fecha)                                   | HU.02       | –            | PBI-02 | 8      |
+| 09 | Implementar asociación de autores a artículos con orden de autoría                                              | HU.02       | 01–08        | PBI-02 | 8      |
+| 10 | Añadir carga de manuscrito obligatorio (DOC/PDF) y anexos opcionales                                            | HU.02       | 08           | PBI-02 | 6      |
+| 11 | Clasificación de artículos en Artículos/Sección Fija                                                            | HU.02       | 08           | PBI-02 | 4      |
+| 12 | Crear vista de detalle de artículo con documentos adjuntos                                                      | HU.02       | 08–11        | PBI-02 | 6      |
+| 13 | Implementar flujo de estados de artículos (Recibido → En revisión → Evaluado → Propuesto → Publicado/Archivado) | HU.03       | 08–12        | PBI-02 | 8      |
+| 14 | Validar transiciones de estado según reglas                                                                     | HU.03       | 13           | PBI-02 | 6      |
+| 15 | Implementar clasificación de artículo (tipo/sección)                                                            | HU.04       | 08           | PBI-02 | 6      |
 
 **Total estimado PBI-02:** ≈ **52 h**
 
----
-
 ## PBI 03 – Consejeros y Evaluaciones (HU.05 – HU.07)
 
-| ID | Título del Issue | HU Asociada | Dependencias | PBI | HE (h) |
-|----|------------------|--------------|---------------|------|--------|
-| 16 | Crear formulario de alta de consejero (perfil militar obligatorio) | HU.05 | – | PBI-03 | 6 |
-| 17 | Crear listado de consejeros con filtro por especialidad | HU.05 | 16 | PBI-03 | 6 |
-| 18 | Implementar asignación de 1..N consejeros a artículos en estado En revisión | HU.06 | 08, 16–17 | PBI-03 | 8 |
-| 19 | Evitar duplicidades en asignación de consejeros | HU.06 | 18 | PBI-03 | 4 |
-| 20 | Crear formulario de registro de evaluación (nota, recomendación, observaciones) | HU.07 | 18 | PBI-03 | 8 |
-| 21 | Permitir adjuntar informe PDF opcional en la evaluación | HU.07 | 20 | PBI-03 | 6 |
-| 22 | Validar paso de artículo a estado Evaluado cuando se alcanza el mínimo de evaluaciones | HU.07 | 20–21 | PBI-03 | 6 |
-| 23 | Crear historial de evaluaciones en vista del artículo | HU.07 | 20–22 | PBI-03 | 6 |
+| ID | Título del Issue                                                                       | HU Asociada | Dependencias | PBI    | HE (h) |
+| -- | -------------------------------------------------------------------------------------- | ----------- | ------------ | ------ | ------ |
+| 16 | Crear formulario de alta de consejero (perfil militar obligatorio)                     | HU.05       | –            | PBI-03 | 6      |
+| 17 | Crear listado de consejeros con filtro por especialidad                                | HU.05       | 16           | PBI-03 | 6      |
+| 18 | Implementar asignación de 1..N consejeros a artículos en estado En revisión            | HU.06       | 08, 16–17    | PBI-03 | 8      |
+| 19 | Evitar duplicidades en asignación de consejeros                                        | HU.06       | 18           | PBI-03 | 4      |
+| 20 | Crear formulario de registro de evaluación (nota, recomendación, observaciones)        | HU.07       | 18           | PBI-03 | 8      |
+| 21 | Permitir adjuntar informe PDF opcional en la evaluación                                | HU.07       | 20           | PBI-03 | 6      |
+| 22 | Validar paso de artículo a estado Evaluado cuando se alcanza el mínimo de evaluaciones | HU.07       | 20–21        | PBI-03 | 6      |
+| 23 | Crear historial de evaluaciones en vista del artículo                                  | HU.07       | 20–22        | PBI-03 | 6      |
 
 **Total estimado PBI-03:** ≈ **50 h**
 
----
+## PBI 04 – Números de Revista (HU.08 – HU.10 + CU.25)
 
-## PBI 04 – Números de Revista (HU.08 – HU.10)
+| ID | Título del Issue                                                 | HU/CU Asociada    | Dependencias | PBI        | HE (h) |
+| -- | ---------------------------------------------------------------- | ----------------- | ------------ | ---------- | ------ |
+| 24 | Crear formulario de alta de número de revista (nº, mes, año)     | HU.08             | –            | PBI-04     | 8      |
+| 25 | Evitar duplicidades en nº + año                                  | HU.08             | 24           | PBI-04     | 4      |
+| 26 | Implementar asignación de artículos a un número (solo evaluados) | HU.09             | 22, 24–25    | PBI-04     | 8      |
+| 27 | Validar número como Propuesto si la asignación es coherente      | HU.09             | 26           | PBI-04     | 6      |
+| 28 | Cambiar estado de número a Publicado, congelando la asignación   | HU.10             | 27           | PBI-04     | 6      |
+| 29 | **Impresión de etiquetas de envío a autores**                    | **CU.25 / RF025** | 24–28        | **PBI-04** | **6**  |
 
-| ID | Título del Issue | HU Asociada | Dependencias | PBI | HE (h) |
-|----|------------------|--------------|---------------|------|--------|
-| 24 | Crear formulario de alta de número de revista (nº, mes, año) | HU.08 | – | PBI-04 | 8 |
-| 25 | Evitar duplicidades en nº + año | HU.08 | 24 | PBI-04 | 4 |
-| 26 | Implementar asignación de artículos a un número (solo evaluados) | HU.09 | 22, 24–25 | PBI-04 | 8 |
-| 27 | Validar número como Propuesto si la asignación es coherente | HU.09 | 26 | PBI-04 | 6 |
-| 28 | Cambiar estado de número a Publicado, congelando la asignación | HU.10 | 27 | PBI-04 | 6 |
-
-**Total estimado PBI-04:** ≈ **32 h**
-
----
+**Total estimado PBI-04:** ≈ **38 h**
 
 ## Resumen del Sprint 1
 
-| PBI | Área Funcional | HU Cubiertas | Total Issues | Estimación Total (h) |
-|------|----------------|---------------|---------------|-----------------------|
-| **PBI-01** | Gestión de Autores | HU.01–HU.05 | 7 | 40 h |
-| **PBI-02** | Gestión de Artículos | HU.02–HU.04 | 8 | 52 h |
-| **PBI-03** | Consejeros y Evaluaciones | HU.05–HU.07 | 8 | 50 h |
-| **PBI-04** | Números de Revista | HU.08–HU.10 | 5 | 32 h |
-| **Total Sprint 1** | — | **HU.01–HU.10** | **28 Issues** | **≈174 h (≈21,5 días)** |
+| PBI                | Área Funcional                 | HU/CU Cubiertas         | Total Issues  | Estimación Total (h)              |
+| ------------------ | ------------------------------ | ----------------------- | ------------- | --------------------------------- |
+| **PBI-01**         | Gestión de Autores             | HU.01–HU.05             | 7             | 40 h                              |
+| **PBI-02**         | Gestión de Artículos           | HU.02–HU.04             | 8             | 52 h                              |
+| **PBI-03**         | Consejeros y Evaluaciones      | HU.05–HU.07             | 8             | 50 h                              |
+| **PBI-04**         | Números de Revista + Etiquetas | HU.08–HU.10 + CU.25     | 6             | 38 h                              |
+| **Total Sprint 1** | —                              | **HU.01–HU.10 + CU.25** | **29 Issues** | **≈ 180 h (≈ 22 días efectivos)** |
 
 ---
 
 ## Conclusiones
 
-- El Sprint 1 abarca **10 Historias de Usuario (HU.01–HU.10)**.  
-- Se planifican **28 Issues** distribuidos en 4 PBIs.  
-- Cada Issue equivale a una tarea de **≤1 día (4–8 h)**.  
-- La carga total del sprint es de **≈174 horas**, lo que representa un esfuerzo de **21–22 días efectivos** para un equipo de 2 desarrolladores.
+* Se incorpora el **CU.25 – Impresión de etiquetas de envío a autores (6 h)** dentro del **PBI-04**.
+* El Sprint 1 abarca **10 Historias de Usuario (HU.01–HU.10)** y **1 HU adicional (CU.25)**.
+* La planificación total asciende a **≈ 180 horas (≈ 22 días efectivos)**, manteniendo un esfuerzo viable para **un equipo de 2 desarrolladores** durante 1 mes.
+* Todas las tareas se mantienen en un rango de **4–8 horas por issue**, facilitando la trazabilidad y gestión ágil del sprint.
+
+---
+
