Update 5.1. Sprint Planning

--- a/5.1.-Sprint-Planning.md
+++ b/5.1.-Sprint-Planning.md
@@ -53,7 +53,7 @@
 | 26 | Implementar asignación de artículos a un número (solo evaluados) | HU.09             | 22, 24–25    | PBI-04     | 8      |
 | 27 | Validar número como Propuesto si la asignación es coherente      | HU.09             | 26           | PBI-04     | 6      |
 | 28 | Cambiar estado de número a Publicado, congelando la asignación   | HU.10             | 27           | PBI-04     | 6      |
-| 29 | **Impresión de etiquetas de envío a autores**                    | **CU.25 / RF025** | 24–28        | **PBI-04** | **6**  |
+| 29 | **Impresión de etiquetas de envío a autores**                    | HU.21 | 24–28        | PBI-04 | 6  |
 
 **Total estimado PBI-04:** ≈ **38 h**
 
@@ -64,15 +64,15 @@
 | **PBI-01**         | Gestión de Autores             | HU.01–HU.05             | 7             | 40 h                              |
 | **PBI-02**         | Gestión de Artículos           | HU.02–HU.04             | 8             | 52 h                              |
 | **PBI-03**         | Consejeros y Evaluaciones      | HU.05–HU.07             | 8             | 50 h                              |
-| **PBI-04**         | Números de Revista + Etiquetas | HU.08–HU.10 + CU.25     | 6             | 38 h                              |
-| **Total Sprint 1** | —                              | **HU.01–HU.10 + CU.25** | **29 Issues** | **≈ 180 h (≈ 22 días efectivos)** |
+| **PBI-04**         | Números de Revista + Etiquetas | HU.08–HU.10 + HU.21     | 6             | 38 h                              |
+| **Total Sprint 1** | —                              | **HU.01–HU.10 + HU.21** | **29 Issues** | **≈ 180 h (≈ 22 días efectivos)** |
 
 ---
 
 ## Conclusiones
 
 * Se incorpora el **CU.25 – Impresión de etiquetas de envío a autores (6 h)** dentro del **PBI-04**.
-* El Sprint 1 abarca **10 Historias de Usuario (HU.01–HU.10)** y **1 HU adicional (CU.25)**.
+* El Sprint 1 abarca **10 Historias de Usuario (HU.01–HU.10)** y **1 HU.21 adicional**.
 * La planificación total asciende a **≈ 180 horas (≈ 22 días efectivos)**, manteniendo un esfuerzo viable para **un equipo de 2 desarrolladores** durante 1 mes.
 * Todas las tareas se mantienen en un rango de **4–8 horas por issue**, facilitando la trazabilidad y gestión ágil del sprint.
 
