Update 5.1. Sprint Planning

--- a/5.1.-Sprint-Planning.md
+++ b/5.1.-Sprint-Planning.md
@@ -1,5 +1,15 @@
 # Sprint 1 (02/10/25 - 24/10/25)
 
+## Sprint Goal
+
+Gestionar el ciclo completo de creación, evaluación y agrupación de artículos, hasta su asignación a un número de revista.
+
+* Gestionar Autores y su información asociada (datos, documentos y perfil militar).
+* Registrar y gestionar consejeros, junto con sus evaluaciones de artículos.
+* Consolidar los artículos en Números de Revista, con control editorial básico.
+
+Este objetivo para el Sprint 01, contribuye al alcanzar el objetivo del Impact Map, reduciendo los artículos gestionados por los Redactores y los procesos manuales de introducción de datos.
+
 ## PBI 01 – Gestión de Autores (HU.01 – HU.05)
 
 | ID | Título del Issue                                                 | HU Asociada | Dependencias | PBI    | HE (h) |
