Actualizado diagrama de negocio a drawio.

--- a/3.2.-Modelos-negocio-dominio.md
+++ b/3.2.-Modelos-negocio-dominio.md
@@ -1,6 +1,6 @@
 ## Modelo de Negocio
 
-![](Diagramas/Diagrama_de_Negocio_REVISTA_EJERCITO.png)
+![](Diagramas/Diagrama_Negocio_V1.drawio.png)
 
 ## Modelo de Dominio
 
